--- a/scripts/rmd_notebooks/heart_analysis_host.Rmd
+++ b/scripts/rmd_notebooks/heart_analysis_host.Rmd
@@ -5,9 +5,9 @@ library(Seurat);
 packageVersion("Seurat")
 library(Matrix); library(stringr); library(dplyr); library(reticulate)
 library(readr); library(fitdistrplus); library(ggplot2)
-library(nichenetr)
-library(EnhancedVolcano)
-library(clusterProfiler)
+# library(nichenetr)
+# library(EnhancedVolcano)
+# library(clusterProfiler)
 library(patchwork)
 # library(AnnotationHub)
 # library(org.Mm.eg.db)
@@ -33,21 +33,19 @@ meta_heart <- meta_heart[meta_heart$tissue == "heart", ]
 ## Load all gene info for mouse reference
 ```{r}
 ## Read in mouse gene info
-gene_info_gtf <- read.csv("./../resources/gene_lists/GRCm39_GENCODEm28_gene_info_gtf.tsv", sep = "\t")
-# gene_info_gtf$GeneSymbol[duplicated(gene_info_gtf$GeneSymbol)]
-# gene_info_gtf$mgi_symbol <- ifelse((gene_info_gtf$mgi_symbol == ""), gene_info_gtf$ensembl_gene_id, gene_info_gtf$mgi_symbol)
-# gene_info_gtf <- gene_info_gtf[!duplicated(gene_info_gtf$mgi_symbol), ]
-table(gene_info_gtf$Biotype)
-gene_info_gtf$biotype_groups = gene_info_gtf$Biotype
-gene_info_gtf$biotype_groups[gene_info_gtf$biotype_groups %in% grep(pattern = "pseudogene", x = unique(gene_info_gtf$biotype_groups), value = TRUE)] <- "pseudogene"
-gene_info_gtf$biotype_groups[gene_info_gtf$biotype_groups %in% grep(pattern = "IG_", x = unique(gene_info_gtf$biotype_groups), value = TRUE)] <- "IG_genes"
-gene_info_gtf$biotype_groups[gene_info_gtf$biotype_groups %in% grep(pattern = "TR_", x = unique(gene_info_gtf$biotype_groups), value = TRUE)] <- "TCR_genes"
-table(gene_info_gtf$biotype_groups)
+gtf.info <- read.csv("./../resources/gene_lists/GRCm39_GENCODEm28_gtf.info.tsv", sep = "\t")
+table(gtf.info$Biotype)
+
+gtf.info$biotype_groups = gtf.info$Biotype
+gtf.info$biotype_groups[gtf.info$biotype_groups %in% grep(pattern = "pseudogene", x = unique(gtf.info$biotype_groups), value = TRUE)] <- "pseudogene"
+gtf.info$biotype_groups[gtf.info$biotype_groups %in% grep(pattern = "IG_", x = unique(gtf.info$biotype_groups), value = TRUE)] <- "IG_genes"
+gtf.info$biotype_groups[gtf.info$biotype_groups %in% grep(pattern = "TR_", x = unique(gtf.info$biotype_groups), value = TRUE)] <- "TCR_genes"
+table(gtf.info$biotype_groups)
 ```
 
 ## Load in the dataset
 ```{r fig.height=4.5, fig.width=4.0}
-load("/workdir/dwm269/totalRNA/spTotal/robjs/heart_list_v3.RData")
+load("#TODO")
 cat("Done")
 
 heart.list <- lapply(
@@ -62,97 +60,7 @@ heart.list <- lapply(
 ```
 
 
-```{r}
-
-# heart.list <- lapply(
-#   heart.list,
-#   FUN = function(SEU) seuPreProcess(
-#     SEU, 
-#     assay="kallisto_collapsed", 
-#     nfeatures = 10000,
-#     res = 0.6,
-#     verbose=F
-#   )
-# )
-
-```
-   
-   
-   
-## Add biotype properties
-```{r}
-
-# for (i in 1:length(heart.list)) {
-#   print(dim(heart.list[[i]]))
-#   for (biotype in unique(gene_info_gtf$biotype_groups)) {
-#     genelist = intersect(rownames(heart.list[[i]]), gene_info_gtf$GeneSymbol[gene_info_gtf$biotype_groups == biotype])
-#     if (length(genelist) >= 2){
-#       print(biotype)
-#       heart.list[[i]]@meta.data[, paste0("nCount_", biotype, sep = "")] <-
-#         colSums(GetAssayData(heart.list[[i]], assay = "kallisto_collapsed", slot = "counts")[genelist, ])
-#       heart.list[[i]]@meta.data[, paste0("Percent_", biotype, sep = "")] <-
-#         colSums(GetAssayData(heart.list[[i]], assay = "kallisto_collapsed", slot = "counts")[genelist, ]) /
-#         colSums(GetAssayData(heart.list[[i]], assay = "kallisto_collapsed", slot = "counts"))
-#       heart.list[[i]]@meta.data[, paste0("nFeature_", biotype, sep = "")] <-
-#         colSums(GetAssayData(heart.list[[i]], assay = "kallisto_collapsed", slot = "counts")[genelist, ] > 0)
-#     }
-#   }
-# }
-
-```
-
-```{r}
-visListPlot(
-  heart.list,#[1:2],
-  sample.titles = stringr::str_remove_all(meta_heart$sample,pattern = "Vis_") %>%
-    # stringr::str_remove_all(pattern ="yPAP-")%>%
-    # stringr::str_remove_all(pattern ="ctrl-")%>%
-    stringr::str_remove_all(pattern ="Heart-"),
-  assay="STARsolo_collapsed",
-  reduction="space",
-  # slot = 'counts',
-  pt.size=0.8,
-  legend.position = "bottom",
-  font.size = 12,
-  axis.title.angle.y=0,
-  ncol = 4,
-  # combine = F,
-  verbose=F,
-  features = c("Percent_miRNA", "Percent_snoRNA", "Percent_snRNA", "Percent_protein_coding")
-  # reo.genes
-) & coord_fixed(ratio = 1.6)
-
-```
-
-## Plot grid of DimPlots on spatial reduction
-```{r}
-
-DimPlotGrid <-
-  function(heart.list,
-           key = "kallisto_collapsed_snn_res.0.6",
-           legend.position = "right") {
-    (
-      DimPlot(heart.list[[1]], reduction = "space", group.by = key) |
-        DimPlot(heart.list[[2]], reduction = "space", group.by = key)
-    ) /
-      (
-        DimPlot(heart.list[[3]], reduction = "space", group.by = key) |
-          DimPlot(heart.list[[4]], reduction = "space", group.by = key)
-      ) &
-      theme_void() &
-      theme(legend.position = legend.position) &
-      coord_fixed(ratio = 1.8) & ggtitle(NULL)
-  }
-
-```
-
-
-```{r fig.height=6, fig.width=6}
-DimPlotGrid(heart.list, key = "kallisto_collapsed_snn_res.1", legend.position = "right")
-
-```
-
-
+### Set cluster IDs
 ```{r}
 Idents(heart.list[[1]]) <-
   heart.list[[1]]$kallisto_collapsed_snn_res.1
@@ -220,15 +128,16 @@ cat("Done")
 
 ## Create a merged object and fix levels for anatomical region 
 ```{r}
-
 heart.list[[1]]$Sample = "Control-Mock"
 heart.list[[2]]$Sample = "Control-Infected"
 heart.list[[3]]$Sample = "yPAP-Mock"
 heart.list[[4]]$Sample = "yPAP-Infected"
 
-heart.list.merged = merge(x = heart.list[[1]],
-                          y = heart.list[c(2:4)],
-                          add.cell.ids = meta_heart$sample)
+heart.list.merged = merge(
+  x = heart.list[[1]],
+  y = heart.list[c(2:4)],
+  add.cell.ids = meta_heart$sample
+)
 
 heart.list.merged$AnatomicalRegion = factor(
   heart.list.merged$AnatomicalRegion,
@@ -243,40 +152,44 @@ heart.list.merged$AnatomicalRegion = factor(
   )
 )
 
-heart.list[[1]]$AnatomicalRegion = factor(heart.list[[1]]$AnatomicalRegion,
-                                          levels = levels(heart.list.merged$AnatomicalRegion))
-heart.list[[2]]$AnatomicalRegion = factor(heart.list[[2]]$AnatomicalRegion,
-                                          levels = levels(heart.list.merged$AnatomicalRegion))
-heart.list[[3]]$AnatomicalRegion = factor(heart.list[[3]]$AnatomicalRegion,
-                                          levels = levels(heart.list.merged$AnatomicalRegion))
-heart.list[[4]]$AnatomicalRegion = factor(heart.list[[4]]$AnatomicalRegion,
-                                          levels = levels(heart.list.merged$AnatomicalRegion))
+heart.list[[1]]$AnatomicalRegion = factor(
+  heart.list[[1]]$AnatomicalRegion,
+  levels = levels(heart.list.merged$AnatomicalRegion)
+)
+heart.list[[2]]$AnatomicalRegion = factor(
+  heart.list[[2]]$AnatomicalRegion,
+  levels = levels(heart.list.merged$AnatomicalRegion)
+)
+heart.list[[3]]$AnatomicalRegion = factor(
+  heart.list[[3]]$AnatomicalRegion,
+  levels = levels(heart.list.merged$AnatomicalRegion)
+)
+heart.list[[4]]$AnatomicalRegion = factor(
+  heart.list[[4]]$AnatomicalRegion,
+  levels = levels(heart.list.merged$AnatomicalRegion)
+)
 
 cat("Done")
 ```  
 
 
-```{r fig.height=5, fig.width=6}
-
-cp <- c("#5AA878", "#E9DF4F", "#3670B7", "#D85B2A", "#C66FA9", "#BDBEC0", "#E3932E", "#60B8EF")
-DimPlotGrid(heart.list, key = "AnatomicalRegion", legend.position = "right") & scale_color_manual(values = cp) 
-
-```
-
 ```{r fig.height=8, fig.width=6}
 VlnPlot(
   heart.list.merged,
-  group.by = "Sample",
+  group.by = "sample",
   features = c(
-    "nCount_STARsolo",
-    "nFeature_STARsolo",
     "nCount_kallisto_collapsed",
     "nFeature_kallisto_collapsed"
   ),
   pt.size = 0,
   ncol = 2
-) & theme_classic() & theme(legend.position = "none", text = element_text(size = 12, colour = "black"), axis.text.x = element_text(angle = 45, hjust = 1.0))
-
+)&
+  theme_classic()&
+  theme(
+    legend.position = "none", 
+    text = element_text(size = 12, colour = "black"),
+    axis.text.x = element_text(angle = 45, hjust = 1.0)
+  )
 ```
 
 # Save list of seurat objects, and each object as an adata individually
@@ -297,19 +210,21 @@ cat("Done.\n\n")
 ```
 
 ```{r}
-load("/workdir/mm2937/polyAtotal/robjs/heart_list_v4.RData"
+load(
+  "/workdir/mm2937/polyAtotal/robjs/heart_list_v4.RData"
 )
-load("/workdir/mm2937/polyAtotal/robjs/heart_list_merged_v4.RData"
+load(
+  "/workdir/mm2937/polyAtotal/robjs/heart_list_merged_v4.RData"
 )
 cat("Done.\n\n")
 ```
 
 
 ```{r}
-table(gene_info_gtf[gene_info_gtf$GeneSymbol %in% intersect(rownames(heart.list.merged), gene_info_gtf$GeneSymbol), "biotype_groups"])
+table(gtf.info[gtf.info$GeneSymbol %in% intersect(rownames(heart.list.merged), gtf.info$GeneSymbol), "biotype_groups"])
 
 biotypes = c("protein_coding")
-genelist = intersect(rownames(heart.list.merged), gene_info_gtf$GeneSymbol[!gene_info_gtf$biotype_groups %in% biotypes])
+genelist = intersect(rownames(heart.list.merged), gtf.info$GeneSymbol[!gtf.info$biotype_groups %in% biotypes])
 print(length(genelist))
 
 yPAP_genes_mock = FindMarkers(
@@ -347,9 +262,9 @@ yPAP_genes_total <- FindMarkers(
 
 ```{r}
 
-gene_info_gtf <- gene_info_gtf[!duplicated(gene_info_gtf$GeneSymbol), ]
-rownames(gene_info_gtf) <- gene_info_gtf$GeneSymbol
-yPAP_genes_total$biotype = gene_info_gtf[rownames(yPAP_genes_total), "biotype_groups"]
+gtf.info <- gtf.info[!duplicated(gtf.info$GeneSymbol), ]
+rownames(gtf.info) <- gtf.info$GeneSymbol
+yPAP_genes_total$biotype = gtf.info[rownames(yPAP_genes_total), "biotype_groups"]
 
 yPAP_genes_total = yPAP_genes_total[yPAP_genes_total$avg_log2FC > 0.2,]
 yPAP_genes_total = yPAP_genes_total[yPAP_genes_total$p_val_adj < 0.01,]
@@ -380,9 +295,9 @@ EnhancedVolcano(
 
 ```{r}
 
-table(gene_info_gtf$biotype_groups)
+table(gtf.info$biotype_groups)
 biotypes = c("protein_coding", "TCR_genes", "IG_genes")
-genelist = gene_info_gtf$GeneSymbol[!gene_info_gtf$biotype_groups %in% biotypes]
+genelist = gtf.info$GeneSymbol[!gtf.info$biotype_groups %in% biotypes]
 length(genelist)
 
 heart.list.filtered <- lapply(
@@ -466,10 +381,10 @@ DimPlotGrid(c(heart.list[c(3,4)], heart.list.filtered[c(1,2)]), key = "kallisto_
 ## Find genes of given biotypes that are enriched in infected samples
 ```{r}
 
-table(gene_info_gtf[gene_info_gtf$GeneSymbol %in% intersect(rownames(heart.list.merged), gene_info_gtf$GeneSymbol), "biotype_groups"])
+table(gtf.info[gtf.info$GeneSymbol %in% intersect(rownames(heart.list.merged), gtf.info$GeneSymbol), "biotype_groups"])
 
 biotypes = c("protein_coding")
-genelist = intersect(rownames(heart.list.merged), gene_info_gtf$GeneSymbol[!gene_info_gtf$biotype_groups %in% biotypes])
+genelist = intersect(rownames(heart.list.merged), gtf.info$GeneSymbol[!gtf.info$biotype_groups %in% biotypes])
 print(length(genelist))
 
 infection_markers_control = FindMarkers(
@@ -495,9 +410,9 @@ cat("Done.\n\n")
 
 ```{r}
 
-gene_info_gtf <- gene_info_gtf[!duplicated(gene_info_gtf$GeneSymbol), ]
-rownames(gene_info_gtf) <- gene_info_gtf$GeneSymbol
-infection_markers_yPAP$biotype = gene_info_gtf[rownames(infection_markers_yPAP), "biotype_groups"]
+gtf.info <- gtf.info[!duplicated(gtf.info$GeneSymbol), ]
+rownames(gtf.info) <- gtf.info$GeneSymbol
+infection_markers_yPAP$biotype = gtf.info[rownames(infection_markers_yPAP), "biotype_groups"]
 
 table(infection_markers_yPAP$biotype)
 
@@ -555,7 +470,7 @@ visListPlot(
 biotypes = c("protein_coding")
 myocarditic_markers_control = FindMarkers(
   heart.list[[2]],
-  features = intersect(rownames(heart.list[[2]]), gene_info_gtf$GeneSymbol[!gene_info_gtf$biotype_groups %in% biotypes]),
+  features = intersect(rownames(heart.list[[2]]), gtf.info$GeneSymbol[!gtf.info$biotype_groups %in% biotypes]),
   group.by = "AnatomicalRegion",
   ident.1 = "Myocarditic region",
   logfc.threshold = 0.0,
@@ -563,7 +478,7 @@ myocarditic_markers_control = FindMarkers(
 )
 myocarditic_markers_yPAP = FindMarkers(
   heart.list[[4]],
-  features = intersect(rownames(heart.list[[4]]), gene_info_gtf$GeneSymbol[!gene_info_gtf$biotype_groups %in% biotypes]),
+  features = intersect(rownames(heart.list[[4]]), gtf.info$GeneSymbol[!gtf.info$biotype_groups %in% biotypes]),
   group.by = "AnatomicalRegion",
   ident.1 = "Myocarditic region",
   logfc.threshold = 0.0,
@@ -574,13 +489,11 @@ cat("Done.\n\n")
 ```
 
 
-
-
 ```{r}
 
-gene_info_gtf <- gene_info_gtf[!duplicated(gene_info_gtf$GeneSymbol), ]
-rownames(gene_info_gtf) <- gene_info_gtf$GeneSymbol
-myocarditic_markers_yPAP$biotype = gene_info_gtf[rownames(myocarditic_markers_yPAP), "biotype_groups"]
+gtf.info <- gtf.info[!duplicated(gtf.info$GeneSymbol), ]
+rownames(gtf.info) <- gtf.info$GeneSymbol
+myocarditic_markers_yPAP$biotype = gtf.info[rownames(myocarditic_markers_yPAP), "biotype_groups"]
 
 myocarditic_markers_yPAP = myocarditic_markers_yPAP[myocarditic_markers_yPAP$avg_log2FC > 0.2,]
 myocarditic_markers_yPAP = myocarditic_markers_yPAP[myocarditic_markers_yPAP$p_val_adj < 0.01,]
@@ -634,7 +547,6 @@ visListPlot(
 ```
 
 
-
 ```{r fig.height=4, fig.width=8}
 
 cp <- c("#5AA878", "#E9DF4F", "#3670B7", "#D85B2A", "#C66FA9", "#BDBEC0", "#E3932E", "#60B8EF")
@@ -647,39 +559,38 @@ VlnPlot(temp, features = c("nCount_xGen.kallisto.sense.log2p1", "nCount_xGen.kal
 
 ```
 
-
+# Regression analysis w/ Monocle
+## Reovirus vs. gene expression
+Initialize cds object
 ```{r}
 library(monocle)
 
 infected_yPAP_CDS <- as.CellDataSet(heart.list[[4]])
 infected_yPAP_CDS@expressionFamily <- negbinomial.size()
-# pData(infected_yPAP_CDS)
-# fData(infected_yPAP_CDS)
 
 non_cavity_cells <- 
   rownames(pData(infected_yPAP_CDS))[pData(infected_yPAP_CDS)["AnatomicalRegion"] != "Cavity"]
 infected_yPAP_CDS <- infected_yPAP_CDS[, non_cavity_cells]
 dim(infected_yPAP_CDS)
-
 ```
 
-## Createing and processing CDS
+### Preprocessing CDS
 ```{r}
-
 infected_yPAP_CDS <- estimateSizeFactors(infected_yPAP_CDS)
 infected_yPAP_CDS <- estimateDispersions(infected_yPAP_CDS)
 
-infected_yPAP_CDS <- detectGenes(infected_yPAP_CDS, min_expr = 0.001)
+infected_yPAP_CDS <- detectGenes(
+  infected_yPAP_CDS,
+  min_expr = 0.001
+)
 dim(infected_yPAP_CDS)
 
-expressed_genes <- row.names(subset(fData(infected_yPAP_CDS),
-    num_cells_expressed >= 10))
+expressed_genes <- row.names(subset(fData(infected_yPAP_CDS), num_cells_expressed >= 10))
 infected_yPAP_CDS <- infected_yPAP_CDS[expressed_genes,]
 dim(infected_yPAP_CDS)
-
 ```
 
-## Selecting genes for ReovirusDE
+### Selecting genes for ReovirusDE
 ```{r}
 disp_table <- dispersionTable(infected_yPAP_CDS)
 
@@ -691,18 +602,16 @@ disp_table <- dispersionTable(infected_yPAP_CDS)
 #   setOrderingFilter(infected_yPAP_CDS, ordering_genes = ordering_genes)
 # plot_ordering_genes(infected_yPAP_CDS)
 
-table(gene_info_gtf$biotype_groups)
+table(gtf.info$biotype_groups)
 biotypes = c("protein_coding", "IG_genes", "TCR_genes")
-ordering_genes <- intersect(disp_table$gene_id, gene_info_gtf$GeneSymbol[!gene_info_gtf$biotype_groups %in% biotypes])
+ordering_genes <- intersect(disp_table$gene_id, gtf.info$GeneSymbol[!gtf.info$biotype_groups %in% biotypes])
 length(ordering_genes)
 infected_yPAP_CDS <-
   setOrderingFilter(infected_yPAP_CDS, ordering_genes = ordering_genes)
-
 ```
 
-# Finding genes that change with reovirus counts
+### Finding genes that change with reovirus counts
 ```{r}
-
 dim(infected_yPAP_CDS)
 CDS_subset <-
   infected_yPAP_CDS[ordering_genes[ordering_genes %in% rownames(infected_yPAP_CDS)], ]
@@ -710,28 +619,27 @@ dim(CDS_subset)
 
 pData(CDS_subset)[, "Pseudotime"] <-
   pData(CDS_subset)$nCount_xGen.kallisto.log2p1
-diff_test_res <- differentialGeneTest(CDS_subset,
-                                      fullModelFormulaStr = "~sm.ns(Pseudotime)", cores = 20)
+diff_test_res <- differentialGeneTest(
+  CDS_subset,                   
+  fullModelFormulaStr = "~sm.ns(Pseudotime)", 
+  cores = 20
+)
 
-write.csv(diff_test_res, file = "./diff_test_res.non.protein.coding.csv")
+write.csv(
+  diff_test_res, 
+  file = "./diff_test_res.non.protein.coding.csv"
+)
 
 dim(diff_test_res)
 sig_gene_names <- subset(diff_test_res, qval < 0.01)
 sig_gene_names <- rownames(sig_gene_names[order(sig_gene_names$qval),])
 print(sig_gene_names)
-
-
-
-
 ```
 
-## Plot GE trends
+### Plot GE trends
 ```{r}
-
 ((FeatureScatter(heart.list[[4]], feature1 = "nCount_xGen.kallisto.log2p1", feature2 = sig_gene_names[1], span = T) | FeatureScatter(heart.list[[4]], feature1 = "nCount_xGen.kallisto.log2p1", feature2 = sig_gene_names[2], span = T)) / (FeatureScatter(heart.list[[4]], feature1 = "nCount_xGen.kallisto.log2p1", feature2 = sig_gene_names[3], span = T) | FeatureScatter(heart.list[[4]], feature1 = "nCount_xGen.kallisto.log2p1", feature2 = sig_gene_names[4], span = T))) & theme(legend.position = "none") & ggtitle(NULL) & scale_color_manual(values = cp)
-
 ```
-
 
 ```{r fig.height=5, fig.width=6}
 cov_plus <- as.data.frame(t(read.csv("./../data/coverage_plts/reovirus_plus.geneBodyCoverage.txt", sep = "\t", row.names = 1)))
@@ -757,6 +665,67 @@ cov_data$Coverage[cov_data$Strand == "minus"] = -1 * cov_data$Coverage[cov_data$
 
 ((ggplot(cov_data[cov_data$Strand == "plus",], mapping = aes(x = Percentile, y = Coverage, color = Sample)) + geom_line() + ylim(0, max(cov_data$Coverage))) / ggplot(cov_data[cov_data$Strand == "minus",], mapping = aes(x = Percentile, y = Coverage, color = Sample)) + geom_line() + scale_y_reverse() + ylim(-1 * max(cov_data$Coverage), 0)) & xlab("Percentile 5' -> 3'") & theme_classic()
 
+```
+
+## Reovirus vs. celltypes (BayesPrism theta)
+Initialize cds object
+```{r}
+require(monocle)
+
+infected_yPAP_CDS <- newCellDataSet(
+  cellData=GetAssayData(heart.list[[4]],assay="celltype.bp")%>%as.matrix(), 
+  phenoData = AnnotatedDataFrame(heart.list[[4]]@meta.data),
+  lowerDetectionLimit = 10^-4
+  # featureData = fd
+)
+
+infected_yPAP_CDS@expressionFamily <- uninormal()
+
+non_cavity_cells <- 
+  rownames(pData(infected_yPAP_CDS))[pData(infected_yPAP_CDS)["AnatomicalRegion"] != "Cavity"]
+infected_yPAP_CDS <- infected_yPAP_CDS[, non_cavity_cells]
+dim(infected_yPAP_CDS)
+```
+
+### Preprocessing CDS
+```{r}
+infected_yPAP_CDS <- estimateSizeFactors(infected_yPAP_CDS)
+# infected_yPAP_CDS <- estimateDispersions(infected_yPAP_CDS) # only used for neg binomial
+
+infected_yPAP_CDS <- detectGenes(
+  infected_yPAP_CDS,
+  min_expr = 0.001
+)
+
+expressed_genes <- row.names(subset(fData(infected_yPAP_CDS), num_cells_expressed >= 10))
+infected_yPAP_CDS <- infected_yPAP_CDS[expressed_genes,]
+dim(infected_yPAP_CDS)
+```
+
+### Finding genes that change with reovirus counts
+```{r}
+# dim(infected_yPAP_CDS)
+# CDS_subset <-
+#   infected_yPAP_CDS[ordering_genes[ordering_genes %in% rownames(infected_yPAP_CDS)], ]
+# dim(CDS_subset)
+
+pData(infected_yPAP_CDS)[, "Pseudotime"] <-
+  pData(infected_yPAP_CDS)$nCount_xGen.kallisto.log2p1
+diff_test_res <- differentialGeneTest(
+  infected_yPAP_CDS,                   
+  fullModelFormulaStr = "~sm.ns(Pseudotime)", 
+  cores = 20
+)
+
+# write.csv(
+#   diff_test_res, 
+#   file = "./diff_test_res.non.protein.coding.csv"
+# )
+
+dim(diff_test_res)
+sig_gene_names <- subset(diff_test_res, qval < 0.01)
+sig_gene_names <- rownames(sig_gene_names[order(sig_gene_names$qval),])
+print(sig_gene_names)
 ```
 
 
